k8s/celery-beat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-beat-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery-beat-deployment
  template:
    metadata:
      labels:
        app: celery-beat-deployment
    spec:
      containers:
      - name: celery-beat-deployment
        image: 40781998/influencer-marketing-api:latest
        command: ["celery", "-A", "InfluencerMarketer", "beat", "--loglevel=info"]
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
