k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend-deployment
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: LoadBalancer

---
apiVersion: v1
kind: Service
metadata:
  name: celery-service
spec:
  selector:
    app: celery-deployment
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: celery-beat-service
spec:
  selector:
    app: celery-beat-deployment
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: ClusterIP
